fix overlapping of placeholder

--- a/components/bl-autocomplete-component/styles/index.less
+++ b/components/bl-autocomplete-component/styles/index.less
@@ -64,7 +64,7 @@
     max-height: @bl-customComponent-autocomplete-options-maxHeight;
     box-shadow: @bl-customComponent-autocomplete-boxShadow;
     border-radius: @bl-customComponent-autocomplete-borderRadius;
-    margin-top: 55px;
+    margin-top: 60px;
     inset: 0 auto auto 0;
     background-color: @bl-customComponent-autocomplete-backgroundColor;
     color: @bl-customComponent-autocomplete-textColor;
@@ -72,7 +72,7 @@
     z-index: 100;
 
     &__placement-top {
-      margin-bottom: 55px;
+      margin-bottom: 65px;
       inset: auto auto 0 0;
     }
   }
@@ -118,6 +118,8 @@
 
     &__move-up {
       transform: translate(14px, -9px) scale(0.75);
+      background-color: @bl-customComponent-autocomplete-backgroundColor;
+      border-radius: 10px;
     }
   }
 
